# small-minds

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  todo.todo
src/agents/: agent.py  agent_factory.py  models.py
src/api/: routes.py
src/api/requests/: chat_completion.py
src/api/responses/: chat_completion.py
src/common/: exceptions.py  latency_measure.py
src/configs/: llm_eval_harness.yaml  provider.yaml
src/evaluation/: evaluator_interface.py  lm_eval_config.py  lm_eval_config_models.py  lm_eval_harness.py
src/extractors/: answer_extractor_interface.py  extractor_factory.py  gsm8k_answer_extractor.py
src/llm/: client_interface.py  factories.py  llm_client_interface.py  ollama_client.py  requests.py  schemas.py
src/llm/ollama/: client.py  config.py
src/strategies/: direct_strategy.py  models.py  strategy_factory.py  strategy_interface.py
