[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.139.0",
    "lm-eval[api]==0.4.12",
    "ollama==0.6.2",
    "transformers==5.12.1",
]

[tool.uv]
add-bounds = "exact"

[tool.fastapi]
entrypoint = "main:app"

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "pylint[spelling]==4.0.6",
    "pysonar==1.6.0.4905",
    "mypy==2.1.0",
    "ruff==0.15.20",
    "pre-commit==4.6.0",
]
